feat: add language selector

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -21,6 +21,7 @@
   --content-padding: 20px;
   --footer-height: 50px;
   --header-height: 50px;
+  --button-size: 40px;
 
   @include sm-breakpoint {
     --content-padding: 10px;
