--- a/src/components/Layout/Header/style.module.scss
+++ b/src/components/Layout/Header/style.module.scss
@@ -8,6 +8,11 @@
     justify-content: space-between;
     align-items: center;
   }
+
+  &Right {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .menu {
@@ -27,5 +32,10 @@
 
   &Container {
     height: 100%;
+    margin-right: 1rem;
   }
+}
+
+.toolbar {
+  display: flex;
 }
