--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,16 @@ body,
   overflow-y: scroll;
 }
 
+#portal-root {
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  pointer-events: none;
+}
+
 body {
   position: relative;
   font-family: Arial, sans-serif;
