--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,6 +7,7 @@
 
   --color-rating: #ffa500;
   --color-error: rgba(255, 0, 0, 0.7);
+  --color-success: #50c878;
 
   --color-text: #212121;
   --color-text-xl: #424242;
@@ -15,15 +16,18 @@
   --color-text-m: #bdbdbd;
   --color-text-xs: #e0e0e0;
   --color-text-s: #f5f5f5;
+  --color-text-light: #ffffff;
 
   --color-bg: #fafafa;
+  --color-panel-bg: rgba(59, 75, 104, 0.07);
+  --color-bg-light: #ffffff;
 
-  --content-padding: 20px;
+  --content-padding: 10px;
   --footer-height: 50px;
   --header-height: 50px;
   --button-size: 40px;
 
   @include sm-breakpoint {
-    --content-padding: 10px;
+    --content-padding: 5px;
   }
 }
