refactor: refactor bottom editors tabs

--- a/src/pages/Graphiql/QueryEditor/style.module.scss
+++ b/src/pages/Graphiql/QueryEditor/style.module.scss
@@ -8,15 +8,13 @@
     margin-right: 0.5rem;
   }
 
-  &Toolbar {
-    &Play {
-      background-color: var(--color-success);
-      color: var(--color-text-light);
+  .playButton {
+    background-color: var(--color-success);
+    color: var(--color-text-light);
 
-      @media (hover: hover) {
-        &:hover {
-          background-color: var(--color-success);
-        }
+    @media (hover: hover) {
+      &:hover {
+        background-color: var(--color-success);
       }
     }
   }
