--- a/src/pages/Graphiql/BottomEditorsTabs/style.module.scss
+++ b/src/pages/Graphiql/BottomEditorsTabs/style.module.scss
@@ -1,17 +1,23 @@
-.bottomEditors {
-  flex: 1 1 0%;
+.header {
+  border-top: 1px solid var(--color-text-xs);
   padding: 0.5rem;
 
-  &Header {
+  &Wrapper {
     display: flex;
     flex-wrap: wrap;
     column-gap: 0.5rem;
-    border-top: 1px solid var(--color-text-xs);
-    padding: 0.5rem;
+  }
+
+  &Toolbar {
   }
 }
 
-.editorTab {
+.tabs {
+  flex: 1 1 0%;
+  padding: 0.5rem;
+}
+
+.tab {
   height: 100%;
   width: 100%;
 
