--- a/src/styles/button.module.scss
+++ b/src/styles/button.module.scss
@@ -1,5 +1,5 @@
 .button {
-  border: none;
+  border: 1px solid transparent;
   border-radius: 5px;
   background: transparent;
   display: flex;
@@ -12,7 +12,7 @@
   @media (hover: hover) {
     &:hover {
       cursor: pointer;
-      background-color: var(--color-text-xs);
+      border-color: var(--color-text-xm);
     }
   }
 
