feat: add validation to login

--- a/src/pages/Login/style.module.scss
+++ b/src/pages/Login/style.module.scss
@@ -26,6 +26,15 @@
   background-color: black;
   cursor: pointer;
 }
+.login__btn:disabled {
+  padding: 10px;
+  font-size: 18px;
+  margin-bottom: 10px;
+  border: none;
+  color: white;
+  cursor: not-allowed;
+  background-color: #f85a5a;
+}
 .login div {
   margin-top: 7px;
 }
