--- a/src/pages/Graphiql/BottomEditorsTabs/style.module.scss
+++ b/src/pages/Graphiql/BottomEditorsTabs/style.module.scss
@@ -22,9 +22,20 @@
   flex: 1 1 0%;
   padding: 0.5rem;
   display: block;
+}
+
+.tabsContainer {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 0%;
+  min-height: 57px;
 
   &Collapsed {
-    display: none;
+    flex: 0;
+
+    .tabs {
+      display: none;
+    }
   }
 }
 
