--- a/src/pages/Graphiql/QueryEditor/style.module.scss
+++ b/src/pages/Graphiql/QueryEditor/style.module.scss
@@ -1,3 +1,10 @@
+.queryEditorContainer {
+  flex: 1 1 0%;
+  min-height: 100px;
+  display: flex;
+  flex-direction: column;
+}
+
 .queryEditor {
   flex: 1 1 0%;
   display: flex;
