--- a/src/pages/Login/style.module.scss
+++ b/src/pages/Login/style.module.scss
@@ -1,10 +1,13 @@
 .login {
-  height: 100vh;
-  width: 100vw;
+  // height: 100vh;
+  // width: 100vw;
+}
+.login__pageContainer {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .login__container {
   display: flex;
   flex-direction: column;
@@ -34,7 +37,4 @@
   color: white;
   cursor: not-allowed;
   background-color: #f85a5a;
-}
-.login div {
-  margin-top: 7px;
 }
