--- a/src/pages/Register/style.module.scss
+++ b/src/pages/Register/style.module.scss
@@ -1,6 +1,4 @@
-.register {
-  height: 100vh;
-  width: 100vw;
+.register__pageContainer {
   display: flex;
   align-items: center;
   justify-content: center;
