--- a/src/pages/Reset/style.module.scss
+++ b/src/pages/Reset/style.module.scss
@@ -1,6 +1,4 @@
-.reset {
-  height: 100vh;
-  width: 100vw;
+.reset__pageContainer {
   display: flex;
   align-items: center;
   justify-content: center;
