--- a/src/pages/Graphiql/hooks/use-resizable-flex/DragBar/style.module.scss
+++ b/src/pages/Graphiql/hooks/use-resizable-flex/DragBar/style.module.scss
@@ -56,6 +56,11 @@ $dragbarWidth: 9px;
     bottom: 0;
     width: 100%;
     height: $dragbarWidth;
+
+    &Bottom {
+      bottom: auto;
+      top: 0;
+    }
   }
 
   .dragbarThumb {
