--- a/src/components/Layout/Footer/style.module.scss
+++ b/src/components/Layout/Footer/style.module.scss
@@ -1,3 +1,5 @@
+@import "@src/styles/breakpoints";
+
 .footer {
   height: var(--footer-height);
   flex: none;
@@ -12,6 +14,10 @@
 .githubLinksList {
   display: flex;
   column-gap: 1rem;
+
+  @include xs-breakpoint {
+    flex-direction: column;
+  }
 }
 
 .githubLink {
