--- a/src/components/Layout/Header/style.module.scss
+++ b/src/components/Layout/Header/style.module.scss
@@ -1,3 +1,5 @@
+@import "@src/styles/breakpoints";
+
 .header {
   height: var(--header-height);
   background-color: var(--color-bg);
@@ -33,6 +35,10 @@
   &Container {
     height: 100%;
     margin-right: 1rem;
+
+    @include xs-breakpoint {
+      display: none;
+    }
   }
 }
 
