--- a/src/pages/Graphiql/BottomEditorsTabs/style.module.scss
+++ b/src/pages/Graphiql/BottomEditorsTabs/style.module.scss
@@ -1,13 +1,16 @@
 .header {
   display: flex;
   justify-content: space-between;
+  column-gap: 0.5rem;
   border-top: 1px solid var(--color-text-xs);
   padding: 0.5rem;
 
   &Wrapper {
     display: flex;
-    flex-wrap: wrap;
-    column-gap: 0.5rem;
+    align-items: center;
+    flex: 1;
+    position: relative;
+    overflow-x: auto;
   }
 
   &Toolbar {
@@ -16,6 +19,12 @@
   .collapseButton {
     color: var(--color-text-xm);
   }
+}
+
+.headers {
+  position: absolute;
+  display: flex;
+  column-gap: 0.5rem;
 }
 
 .tabs {
@@ -44,7 +53,7 @@
   width: 100%;
 
   &Header {
-    padding: 0.5rem;
+    padding: 0 0.5rem;
     color: var(--color-text-m);
     border-radius: 5px;
 
