--- a/src/pages/Graphiql/Editor/codemirror.scss
+++ b/src/pages/Graphiql/Editor/codemirror.scss
@@ -1,5 +1,5 @@
 .cm-gutters {
-  background-color: transparent !important;
+  background-color: inherit !important;
   border-right: none !important;
 }
 
