--- a/src/pages/Graphiql/QueryEditor/style.module.scss
+++ b/src/pages/Graphiql/QueryEditor/style.module.scss
@@ -15,6 +15,14 @@
     margin-right: 0.5rem;
   }
 
+  &Toolbar {
+    width: var(--button-size);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   .playButton {
     background-color: var(--color-success);
     color: var(--color-text-light);
