--- a/src/pages/Graphiql/SideToolbar/style.module.scss
+++ b/src/pages/Graphiql/SideToolbar/style.module.scss
@@ -1,3 +1,5 @@
+@import "@src/styles/breakpoints";
+
 .verticalToolbar {
   width: var(--button-size);
   height: 100%;
@@ -7,5 +9,18 @@
 }
 
 .sideToolbar {
+  width: var(--button-size);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   margin-right: 0.5rem;
+
+  @include sm-breakpoint {
+    width: 100%;
+    height: var(--button-size);
+    flex-direction: row;
+    align-items: flex-start;
+  }
 }
