feat: add graphql query fetching

--- a/src/pages/Graphiql/QueryEditor/style.module.scss
+++ b/src/pages/Graphiql/QueryEditor/style.module.scss
@@ -23,7 +23,7 @@
     align-items: center;
   }
 
-  .playButton {
+  .requestButton {
     background-color: var(--color-success);
     color: var(--color-text-light);
 
