--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -27,6 +27,7 @@
   --header-height: 50px;
   --button-size: 40px;
   --rss-logo-size: 100px;
+  --dragbar-width: 9px;
 
   @include sm-breakpoint {
     --content-padding: 5px;
