feat: add logout img

--- a/src/components/Layout/Header/style.module.scss
+++ b/src/components/Layout/Header/style.module.scss
@@ -26,6 +26,9 @@
     display: flex;
     align-items: center;
     height: 100%;
+    img {
+      width: var(--logout-img-size);
+    }
 
     &Active {
       color: var(--color-primary);
