fix: fix styles error

--- a/src/pages/Login/style.module.scss
+++ b/src/pages/Login/style.module.scss
@@ -10,11 +10,12 @@
   text-align: center;
   background-color: #dcdcdc;
   padding: 30px;
+  width: 300px;
 }
 .login__textBox {
   padding: 10px;
   font-size: 18px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 .login__btn {
   padding: 10px;
