--- a/src/pages/Register/style.module.scss
+++ b/src/pages/Register/style.module.scss
@@ -9,11 +9,12 @@
   text-align: center;
   background-color: #dcdcdc;
   padding: 30px;
+  width: 300px;
 }
 .register__textBox {
   padding: 10px;
   font-size: 18px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 .register__btn {
   padding: 10px;
@@ -32,7 +33,4 @@
   color: white;
   cursor: not-allowed;
   background-color: #f85a5a;
-}
-.register div {
-  margin-top: 7px;
 }
