feat: add button tooltips

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -18,8 +18,8 @@
   --color-text-s: #f5f5f5;
   --color-text-light: #ffffff;
 
-  --color-bg: #fafafa;
-  --color-panel-bg: rgba(59, 75, 104, 0.07);
+  --color-bg: #f1f2f4;
+  --color-panel-bg: #f1f2f4;
   --color-bg-light: #ffffff;
 
   --content-padding: 10px;
