--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
-@import "../../node_modules/normalize.css/normalize.css";
+@import "normalize.css/normalize.css";
+@import "react-tooltip/dist/react-tooltip.css";
 @import "./_variables";
 
 html,
