--- a/src/components/Layout/Header/style.module.scss
+++ b/src/components/Layout/Header/style.module.scss
@@ -14,6 +14,7 @@
   &Right {
     display: flex;
     align-items: center;
+    height: 100%;
   }
 }
 
@@ -31,11 +32,13 @@
     }
 
     &Active {
-      color: var(--color-primary);
+      border-bottom: 2px solid var(--color-primary);
     }
   }
 
   &Container {
+    display: flex;
+    align-items: center;
     height: 100%;
     margin-right: 1rem;
 
@@ -47,4 +50,5 @@
 
 .toolbar {
   display: flex;
+  column-gap: 0.5rem;
 }
