--- a/src/components/Loader/style.module.scss
+++ b/src/components/Loader/style.module.scss
@@ -1,24 +1,58 @@
 .loaderContainer {
   display: flex;
   justify-content: center;
+
+  &_lg {
+    .ldsDualRing {
+      width: 80px;
+      height: 80px;
+    }
+
+    .ldsDualRing::after {
+      border-width: 6px;
+      margin: 2px;
+    }
+  }
+
+  &_md {
+    .ldsDualRing {
+      width: 50px;
+      height: 50px;
+    }
+
+    .ldsDualRing::after {
+      border-width: 4px;
+      margin: 0px;
+    }
+  }
+
+  &_sm {
+    .ldsDualRing {
+      width: 30px;
+      height: 30px;
+    }
+
+    .ldsDualRing::after {
+      border-width: 3px;
+      margin: 0px;
+    }
+  }
 }
 
 .ldsDualRing {
   display: inline-block;
   width: 80px;
   height: 80px;
-  transform: scale(0.6);
 }
 
-.ldsDualRing:after {
-  content: " ";
+.ldsDualRing::after {
+  content: "";
   display: block;
-  width: 64px;
-  height: 64px;
-  margin: 8px;
+  width: 80%;
+  height: 80%;
   border-radius: 50%;
-  border: 6px solid var(--color-text-m);
-  border-color: var(--color-text-m) transparent var(--color-text-m) transparent;
+  border: 6px solid var(--color-primary);
+  border-color: var(--color-primary) transparent var(--color-primary) transparent;
   animation: lds-dual-ring 1.2s linear infinite;
 }
 
