--- a/src/components/Layout/Header/style.module.scss
+++ b/src/components/Layout/Header/style.module.scss
@@ -1,5 +1,3 @@
-@import "@src/styles/breakpoints";
-
 .header {
   height: var(--header-height);
   background-color: var(--color-bg);
@@ -11,40 +9,17 @@
     align-items: center;
   }
 
-  &Right {
-    display: flex;
-    align-items: center;
-    height: 100%;
-  }
-}
-
-.menu {
-  height: 100%;
-  display: flex;
-  column-gap: 1rem;
-
-  &Link {
-    display: flex;
-    align-items: center;
-    height: 100%;
-    img {
-      width: var(--logout-img-size);
-    }
-
-    &Active {
-      border-bottom: 2px solid var(--color-primary);
-    }
-  }
-
-  &Container {
+  &MenuContainer {
     display: flex;
     align-items: center;
     height: 100%;
     margin-right: 1rem;
+  }
 
-    @include xs-breakpoint {
-      display: none;
-    }
+  &Right {
+    display: flex;
+    align-items: center;
+    height: 100%;
   }
 }
 
