--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,6 +8,7 @@
   --color-rating: #ffa500;
   --color-error: rgba(255, 0, 0, 0.7);
   --color-success: #50c878;
+  --color-info: #3399ff;
 
   --color-text: #212121;
   --color-text-xl: #424242;
@@ -17,6 +18,7 @@
   --color-text-xs: #e0e0e0;
   --color-text-s: #f5f5f5;
   --color-text-light: #ffffff;
+
 
   --color-bg: #f1f2f4;
   --color-panel-bg: #f1f2f4;
