--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -18,7 +18,7 @@
   --color-text-xs: #e0e0e0;
   --color-text-s: #f5f5f5;
   --color-text-light: #ffffff;
-
+  --color-loader: var(--color-primary);
 
   --color-bg: #f1f2f4;
   --color-panel-bg: #f1f2f4;
