feat: add toast messages

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @import "normalize.css/normalize.css";
 @import "react-tooltip/dist/react-tooltip.css";
+@import "react-toastify/dist/ReactToastify.css";
 @import "./_variables";
 
 html,
