feat: improve styles

--- a/src/styles/button.module.scss
+++ b/src/styles/button.module.scss
@@ -18,7 +18,7 @@
 
   &:active,
   &Active {
-    background-color: var(--color-text-xs);
+    background-color: var(--color-primary-alpha50);
   }
 
   &Icon {
