--- a/src/components/LanguageSelector/style.module.scss
+++ b/src/components/LanguageSelector/style.module.scss
@@ -5,7 +5,7 @@
 
   @media (hover: hover) {
     &:hover {
-      background-color: var(--color-text-xs);
+      background-color: var(--color-bg);
     }
   }
 
