--- a/src/components/Popup/style.module.scss
+++ b/src/components/Popup/style.module.scss
@@ -1,8 +1,9 @@
 .popup {
   position: absolute;
+  z-index: 12;
   overflow: hidden;
   pointer-events: all;
-  background: var(--color-bg);
+  background: var(--color-bg-light);
   border-radius: 5px;
   box-shadow: 0 5px 15px -10px var(--color-text);
 }
