--- a/src/pages/Graphiql/DocsExplorerPanel/style.module.scss
+++ b/src/pages/Graphiql/DocsExplorerPanel/style.module.scss
@@ -18,6 +18,10 @@
       background: white;
       width: 100%;
       padding: 0 var(--content-padding);
+      justify-content: center;
+      border-left: none;
+      top: var(--header-height);
+      height: calc(100vh - var(--header-height));
     }
   }
 
@@ -32,6 +36,7 @@
     pointer-events: all;
 
     @include sm-breakpoint {
+      left: auto;
       border-radius: 10px;
       box-shadow: 0 5px 15px -10px var(--color-text);
     }
