--- a/src/pages/Graphiql/style.module.scss
+++ b/src/pages/Graphiql/style.module.scss
@@ -6,6 +6,10 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+
+    @include xs-breakpoint {
+      height: 150vh;
+    }
   }
 
   &Container {
