--- a/src/components/LanguageSelector/style.module.scss
+++ b/src/components/LanguageSelector/style.module.scss
@@ -17,15 +17,14 @@
     display: flex;
     column-gap: 0.5rem;
 
-    &::before {
-      content: "✓";
+    & .check {
       opacity: 0;
       transition: 0.25s;
     }
   }
 
   input:checked ~ label {
-    &::before {
+    & .check {
       opacity: 1;
     }
   }
