--- a/src/components/Layout/Header/HeaderMenu/style.module.scss
+++ b/src/components/Layout/Header/HeaderMenu/style.module.scss
@@ -3,6 +3,18 @@
   display: flex;
   column-gap: 1rem;
 
+  &Container {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    margin-right: 1rem;
+  }
+
+  &Wrapper {
+    display: flex;
+    align-items: center;
+  }
+
   &Link {
     display: flex;
     align-items: center;
@@ -18,6 +30,69 @@
       border-color: var(--color-primary);
       cursor: default;
       pointer-events: none;
+    }
+  }
+
+  &Toolbar {
+    display: flex;
+    align-items: center;
+    column-gap: 0.5rem;
+  }
+}
+
+.burgerMenu {
+  display: none;
+  position: absolute;
+  z-index: 11;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+
+  &Overlay {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+
+  &Show {
+    display: flex;
+  }
+
+  & .menu {
+    flex-direction: column;
+    row-gap: 1rem;
+
+    &Wrapper {
+      display: flex;
+      position: absolute;
+      z-index: 12;
+      top: 0;
+      right: 0;
+      align-items: flex-end;
+      flex-direction: column-reverse;
+      row-gap: 1rem;
+      pointer-events: all;
+      background-color: var(--color-bg);
+      width: 100%;
+      padding-bottom: 1rem;
+      box-shadow: -4px 0px 10px -5px var(--color-text-l);
+    }
+
+    li {
+      text-align: right;
+    }
+
+    &Link {
+      display: inline-flex;
+      line-height: 1.5rem;
+    }
+
+    &Toolbar {
+      height: var(--header-height);
+      padding-right: var(--content-padding);
     }
   }
 }
