--- a/src/components/Layout/Header/HeaderMenu/style.module.scss
+++ b/src/components/Layout/Header/HeaderMenu/style.module.scss
@@ -48,6 +48,7 @@
   left: 0;
   bottom: 0;
   right: 0;
+  pointer-events: none;
 
   &Overlay {
     display: block;
@@ -55,6 +56,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    pointer-events: all;
   }
 
   &Show {
