--- a/src/components/Layout/Header/HeaderMenu/style.module.scss
+++ b/src/components/Layout/Header/HeaderMenu/style.module.scss
@@ -13,6 +13,7 @@
   &Wrapper {
     display: flex;
     align-items: center;
+    height: 100%;
   }
 
   &Link {
@@ -22,8 +23,16 @@
 
     border-bottom: 2px solid transparent;
 
-    img {
-      width: var(--logout-img-size);
+    &Icon {
+      margin-right: 0.5rem;
+      color: var(--color-text-xm);
+      transition: 0.25s;
+    }
+
+    @media (hover: hover) {
+      &:hover &Icon {
+        color: var(--color-primary);
+      }
     }
 
     &Active {
@@ -68,6 +77,7 @@
     row-gap: 1rem;
 
     &Wrapper {
+      height: auto;
       display: flex;
       position: absolute;
       z-index: 12;
