--- a/src/pages/Graphiql/SideToolbar/style.module.scss
+++ b/src/pages/Graphiql/SideToolbar/style.module.scss
@@ -14,13 +14,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  row-gap: 0.5rem;
   margin-right: 0.5rem;
 
   @include sm-breakpoint {
+    margin-right: 1rem;
     width: 100%;
     height: var(--button-size);
     flex-direction: row;
+    column-gap: 0.5rem;
     align-items: flex-start;
   }
 }
