--- a/src/pages/Graphiql/DocsExplorerPanel/DocsExplorer/style.module.scss
+++ b/src/pages/Graphiql/DocsExplorerPanel/DocsExplorer/style.module.scss
@@ -99,3 +99,62 @@
     font-size: 1.5em;
   }
 }
+
+.SearchBlock {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  height: 2rem;
+  margin-bottom: 1rem;
+  color: var(--color-text-xl);
+
+  input {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 30%;
+    flex: 1;
+    padding: 0.5rem;
+    padding-right: 2rem;
+    background-color: transparent;
+    border: 1px solid var(--color-text-m);
+    outline: 1px solid transparent;
+    outline: none;
+
+    &:focus {
+      width: calc(100% - 50px);
+      background-color: var(--color-bg-light);
+      transition: 500ms;
+    }
+
+    &:focus + .clearBtn {
+      display: block;
+    }
+  }
+}
+
+.clearBtn {
+  display: none;
+  position: absolute;
+  right: 1px;
+  top: 4px;
+  height: calc(100% - 2px);
+  width: 1.5rem;
+  border-radius: 0;
+  color: var(--color-error);
+
+  &:active:hover,
+  &:active {
+    background-color: var(--color-text-xs);
+  }
+
+  @media (hover: hover) {
+    &:hover {
+      background-color: var(--color-text-s);
+      border-color: transparent;
+    }
+  }
+}
+
