--- a/src/pages/Graphiql/DocsExplorerPanel/DocsExplorer/style.module.scss
+++ b/src/pages/Graphiql/DocsExplorerPanel/DocsExplorer/style.module.scss
@@ -67,7 +67,7 @@
   }
 
   &LinkField,
-  &LinkType:hover {
+  &LinkField:hover {
     color: var(--color-info);
   }
 
@@ -100,43 +100,61 @@
   }
 }
 
-.SearchBlock {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
-  height: 2rem;
-  margin-bottom: 1rem;
-  color: var(--color-text-xl);
-
-  input {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 30%;
-    flex: 1;
-    padding: 0.5rem;
-    padding-right: 2rem;
-    background-color: transparent;
-    border: 1px solid var(--color-text-m);
-    outline: 1px solid transparent;
-    outline: none;
-
-    &:focus {
-      width: calc(100% - 50px);
-      background-color: var(--color-bg-light);
-      transition: 500ms;
-    }
-
-    &:focus + .clearBtn {
-      display: block;
-    }
+.homeBtn {
+  padding: 0 5px;
+  
+  &:hover {
+    border-color: transparent;
   }
 }
 
+.Search {
+  &Block {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    height: 2rem;
+    margin-bottom: 1rem;
+    color: var(--color-text-xl);
+
+    input {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 30%;
+      flex: 1;
+      padding: 0.5rem;
+      padding-left: 2rem;
+      background-color: transparent;
+      border: 1px solid var(--color-text-m);
+      outline: 1px solid transparent;
+      outline: none;
+
+      &:focus {
+        width: calc(100% - 50px);
+        background-color: var(--color-bg-light);
+        transition: 500ms;
+
+        & + .SearchIcon {
+          right: calc(100% - 70px);
+          transition: 500ms;
+        }
+      }
+    }
+  }
+
+  &Icon {
+    position: absolute;
+    top: 8px;
+    right: calc(30% - 20px);
+  }
+
+}
+
 .clearBtn {
-  display: none;
+  display: block;
   position: absolute;
   right: 1px;
   top: 4px;
@@ -144,6 +162,10 @@
   width: 1.5rem;
   border-radius: 0;
   color: var(--color-error);
+
+  &:disabled {
+    display: none;
+  }
 
   &:active:hover,
   &:active {
