--- a/src/pages/Welcome/DeveloperCard/style.module.scss
+++ b/src/pages/Welcome/DeveloperCard/style.module.scss
@@ -2,39 +2,66 @@
   &Container {
     display: flex;
     flex-direction: column;
+    width: 300px;
   }
+
   &Circle {
     display: inline-block;
     border-radius: 50%;
     overflow: hidden;
-    width: 80%;
-    padding-bottom: 80%;
+    width: 150px;
+    padding-bottom: 150px;
     height: 0;
     position: relative;
     align-self: center;
-    margin-bottom: 10px;
+    margin-bottom: 1.5rem;
   }
 
   &Img {
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
     position: absolute;
     border-radius: 50%;
     object-fit: cover;
   }
 
-  &Link {
-    color: var(--color-text);
-    &:hover {
-      color: var(--color-text);
-    }
+  &Header {
+    font-size: 1.5rem;
+    font-weight: 400;
+    color: var(--color-text-xl);
+    margin-bottom: 0.5rem;
+    text-align: center;
   }
 
-  &Header {
-    padding: 0.5em 0;
-  }
-  
   &Desc {
-    
+    text-align: center;
+    color: var(--color-text-l);
+    line-height: 140%;
+  }
+
+  &Contacts {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1rem;
+    column-gap: 1rem;
+  }
+
+  &Link {
+    display: block;
+    color: var(--color-text-l);
+
+    &Discrod {
+      color: #5865f2;
+    }
+
+    &:active {
+      transform: translateY(1px);
+    }
+
+    @media (hover: hover) {
+      &:hover {
+        color: rgba(0, 0, 0, 0.5);
+      }
+    }
   }
 }
