--- a/src/pages/Welcome/style.module.scss
+++ b/src/pages/Welcome/style.module.scss
@@ -134,21 +134,16 @@
 }
 
 .team {
-  &Container {
-  }
-
   &Content {
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
     flex-wrap: wrap;
+    row-gap: 2rem;
   }
 }
 
 .features {
-  &Container {
-  }
-
   &Content {
     display: flex;
     justify-content: space-around;
