fix: fix styles

--- a/src/components/Layout/Header/style.module.scss
+++ b/src/components/Layout/Header/style.module.scss
@@ -20,6 +20,10 @@ $sticky-threshold: 1px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    &Bounded {
+      max-width: var(--content-width);
+    }
   }
 
   &Right,
