--- a/src/components/Layout/Footer/style.module.scss
+++ b/src/components/Layout/Footer/style.module.scss
@@ -10,6 +10,10 @@
     justify-content: space-between;
     align-items: center;
     column-gap: 2rem;
+
+    &Bounded {
+      max-width: var(--content-width);
+    }
   }
 
   &Left {
