--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -24,6 +24,7 @@
   --color-panel-bg: #f1f2f4;
   --color-bg-light: #ffffff;
 
+  --content-width: 1200px;
   --content-padding: 10px;
   --footer-height: 60px;
   --header-height: 50px;
