--- a/src/styles/button.module.scss
+++ b/src/styles/button.module.scss
@@ -35,6 +35,10 @@
     pointer-events: none;
     color: var(--color-text-m);
   }
+
+  &Inner {
+    pointer-events: none;
+  }
 }
 
 .button + .tooltip {
