refactor: refactor mouse events

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,7 +6,8 @@
 html,
 body,
 #root,
-#scroll-container {
+#scroll-container,
+#mouse-actions-container {
   height: 100%;
   min-height: 100%;
   overflow: hidden;
@@ -27,7 +28,7 @@ body,
   left: 0;
   right: 0;
   bottom: 0;
-  pointer-events: none;
+  // pointer-events: none;
 }
 
 body {
