fix: fix bug with scroll

--- a/src/pages/Welcome/style.module.scss
+++ b/src/pages/Welcome/style.module.scss
@@ -65,7 +65,9 @@
     font-size: 2rem;
     text-align: center;
     margin-bottom: 3rem;
-    color: #171e26;
+    color: var(--color-text-l);
+    font-weight: 400;
+    letter-spacing: 1px;
   }
 }
 
